Adding the readme file

--- a/stage2/app.json
+++ b/stage2/app.json
@@ -21,10 +21,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.aksantibahiga.stage2"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "744a2fc3-a18b-40a3-878c-89d606c87474"
+      }
     }
   }
 }
